<resources>
    <string name="app_name">CS496FinalProj</string>
    <string name="action_settings">Settings</string>
    <string name="scan">Scan</string>
    <string name="poweredBy">poweredBy</string>
    <string name="title_activity_login">Login</string>
    <string name="createacct">Create Account</string>
    <string name="loginacct">Log In To Existing Account</string>
    <string name="password">Password</string>
    <string name="warehouse_name">Warehouse</string>
    <string name="manager_name">Manager</string>
    <string name="email">Email</string>
    <string name="logout">Log Out</string>
    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_log_in_to_account">LogInToAccount</string>
    <string name="title_activity_merch_details">MerchDetails</string>
    <string name="merch_details">Merch Details</string>
    <string name="barcode">Barcode</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="size">Size</string>
    <string name="add">Add</string>
    <string name="change">Change</string>
    <string name="delete">Delete</string>
    <string name="noInventory">No inventory to display.</string>
</resources>
