<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button android:id="@+id/scan_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/scan_format"
            android:layout_alignEnd="@+id/scan_format"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/scan_format"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scan_button" />

        <TextView
            android:id="@+id/scan_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/scan_format" />

        <TextView
            android:id="@+id/warehouse_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="warehousename"
            android:layout_below="@+id/scan_format"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/manager_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textIsSelectable="true"
            android:text="managername"
            android:layout_alignBaseline="@+id/scan_content"
            android:layout_alignBottom="@+id/scan_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <Button android:id="@+id/logout_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:onClick="LogOut"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@+id/scan_format"
            android:layout_toEndOf="@+id/scan_format" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/inventory"
            android:textAlignment="center"
            android:divider="#000000"
            android:stretchColumns="*"
            android:shrinkColumns="*"
            android:layout_below="@+id/scan_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

        </TableLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/noInventory"
            android:text="@string/noInventory"
            android:visibility="gone"
            android:layout_below="@+id/scan_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp" />

    </RelativeLayout>
</ScrollView>